Fix background overflow

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ body {
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
 }
 
+.background {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
 
 .background__img {
   position: absolute;
